buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        classpath 'org.ajoberstar:grgit:1.1.0'
    }
}

plugins {
	id 'fr.brouillard.oss.gradle.jgitver' version '0.8.0'
}

jgitver {
	useDistance true
	useGitCommitID true
	useDirty true
	/* To play nice with literally everything else. */
	autoIncrementPatch false
}

apply plugin: 'base'
apply plugin: 'idea'

subprojects {
	apply plugin: 'java'
	//apply plugin: 'idea'

	version = rootProject.description

	sourceCompatibility = 11
	[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

	repositories {
		mavenCentral()
		/* For org.everit.json.schema */
		maven { url 'https://jitpack.io' }
	}

	dependencies {
		testCompile group:	'junit', name: 'junit', version: '4.10'
	}

	tasks.withType(JavaCompile) {
		options.compilerArgs << '-Xlint:unchecked'
		options.deprecation = true
	}

	test {
		testLogging.showStandardStreams = true
	}
}

allprojects {
	ext {
		LOG4J_VERSION = '2.10.0'
		SLF4J_VERSION = '1.7.29'
		JAVAX_JSON_VERSION = '1.1'
	}
}
